@@ -1,3 +1,8 @@
+2018-05-19 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Match country and title for currencies in completion suggestion list
+	* Show currency flag in result when currency code is used
+
 2018-05-02 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Search box for functions, variables, units, and long unit conversion lists
